--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
 
   <body
-    class="min-h-screen flex items-center justify-center bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500"
+    class="min-h-screen flex items-center justify-center bg-green-950"
   >
     <!-- Main Card -->
     <div
