--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
 
   <body
-    class="min-h-screen flex items-center justify-center bg-green-950"
+    class="min-h-screen flex items-center justify-center bg-green-800"
   >
     <!-- Main Card -->
     <div
@@ -82,15 +82,12 @@
           <input
             id="taskInput"
             type="text"
-            placeholder="✍️ Write a new task..."
+            placeholder="Write a new task..."
             class="flex-1 px-4 py-3 bg-white/90 focus:bg-white focus:outline-none text-gray-700 placeholder-gray-400 text-sm font-medium"
           />
           <button
             id="addBtn"
-            class="relative overflow-hidden px-5 py-3 font-semibold text-white text-sm rounded-r-xl transition-all duration-300
-                   bg-gradient-to-r from-green-500 via-emerald-500 to-teal-500
-                   hover:from-teal-500 hover:to-green-600
-                   shadow-lg hover:shadow-green-400/50 active:scale-95 glow-btn"
+            class="relative overflow-hidden px-5 py-3 font-semibold text-white text-sm rounded-r-xl transition-all duration-300 bg-gradient-to-r from-green-500 via-emerald-500 to-teal-500 hover:from-teal-500 hover:to-green-600 shadow-lg hover:shadow-green-400/50 active:scale-95 glow-btn"
           >
             <span class="relative z-10 flex items-center gap-1">
               <svg
